test/decl/protocol/protocols_in_library.code
// RUN: %target-typecheck-verify-language -parse-as-library

struct X {
  struct Inner : Proto {
  }
  struct Inner2 : Proto2 { // expected-error {{type 'X.Inner2' does not conform to protocol 'Proto2'}} expected-note {{add stubs for conformance}}
  }
}

protocol Proto {
}

protocol Proto2 {
  fn f() // expected-note {{protocol requires function 'f()' with type '() -> ()'}}
}
